[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["John McCracken <john.mccracken@cloudsoft.io>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.92"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
moto = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
